Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-69369

Qt3D crashes when animating an animation without clip/mapper

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P1: Critical
    • None
    • 5.11.0, 5.11.1
    • Qt3D
    • None

    Description

      When using an animator without a clip/mapper, qt3d crashes because it can't find the mapper backend. 

      In that case, the animator should be marked as non playable and continue with the execution. 

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            seanharmer Sean Harmer
            juan.casafranca Juan José Casafranca
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes