Check animator can be played in frontend and backend

We check that the animator can be played in the frontend. Each animator
subclass must implement their own canPlay method.

In the backend we correctly check the clipAnimator can be played

Task-number: QTBUG-69369
Change-Id: If8bca9b73321e2bfdb4d68ddc286df0109ee91f1
Reviewed-by: Paul Lemire <paul.lemire@kdab.com>